# Adhikar-AI

./: README.md  pyproject.toml  requirements.txt
data/.chroma/: chroma.sqlite3
data/analytics/: policy_violations.db
data/charters/: dncc_sample.txt  dscc_sample.txt
data/contacts/: dncc_officers_sample.csv
scripts/: ingest_charters.py
src/adhikar_ai/: __init__.py  agent.py  agents.py  analytics.py  app.py  config.py  contacts.py  data.py  database.py  email_service.py  ingest.py  llm_provider.py  models.py  rag.py  rag_logic.py  search.py  supabase_client.py  utils.py
