[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adhikar-ai"
version = "0.1.0"
description = "Adhikar AI civic complaint assistant for Dhaka citizens"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "chromadb>=0.5.5",
  "langchain>=0.2.12",
  "langgraph>=0.2.35",
  "openai>=1.40.0",
  "pandas>=2.2.2",
  "pypdf>=4.3.1",
  "pydeck>=0.9.1",
  "requests>=2.32.0",
  "streamlit>=1.37.1",
]

[project.scripts]
adhikar-ingest = "adhikar_ai.ingest:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
